--- a/public/assets/scss/_faq.scss
+++ b/public/assets/scss/_faq.scss
@@ -69,7 +69,7 @@
 	box-shadow: none;
 	.cus-icon {
 		background-color: $theme-color4 !important;
-		color: $theme-color !important;
+		color: #ffffff !important;
 		transform: rotate(180deg);
 	}
 }
