--- a/public/assets/scss/_news.scss
+++ b/public/assets/scss/_news.scss
@@ -7,7 +7,7 @@
 		}
 	}
 	&:hover {
-		background-color: #2e8b57;
+		background-color: $theme-color2;
 		.content {
 			.theme4-border {
 				border-color: $white !important;
