--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -2,7 +2,7 @@
 Theme Name: Rudra
 Author: Rudra_
 Author URI: 
-Description: Rudra - ÔÇô Multipurpose Professional Consulting Html Template
+Description: Rudra - Multipurpose Professional Consulting Html Template
 Version: 1.0.0
 */
 
