--- a/public/assets/scss/_cta.scss
+++ b/public/assets/scss/_cta.scss
@@ -3,7 +3,7 @@
 	padding: 32px 32px;
     transition: all 0.4s;
     &:hover{
-        background-color: #b3e7173d;
+        background-color: rgba(var(--theme2-rgb), 0.24);
     }
 	@include breakpoint(max-xxl) {
 		padding: 24px 20px;
