--- a/public/assets/scss/_helping.scss
+++ b/public/assets/scss/_helping.scss
@@ -6,13 +6,17 @@
 }
 /* Track */
 ::-webkit-scrollbar-track {
-	box-shadow: inset 0 0 5px $theme-color; 
+	background-color: var(--bg);
 	border-radius: 5px;
 }
 /* Handle */
 ::-webkit-scrollbar-thumb {
-	background: $theme-color;
+	background: var(--theme4);
 	border-radius: 10px;
+	border: 2px solid var(--bg);
+}
+::-webkit-scrollbar-thumb:hover {
+	background: var(--theme);
 }
 //page scroll bar add
 
