--- a/public/assets/scss/_hero.scss
+++ b/public/assets/scss/_hero.scss
@@ -401,30 +401,30 @@
 }
 .choose-partner-color {
 	.work-list-item {
-		background-color: $bg-color !important;
+		background-color: var(--bg) !important;
 		border-radius: 19px !important;
 		.icon {
-			background-color: $theme-color !important;
+			background-color: var(--theme) !important;
 			svg {
 				path {
-					fill: $theme-color4 !important;
+					fill: var(--theme4) !important;
 				}
 			}
 		}
 		&:hover {
-			background-color: $theme-color !important;
+			background-color: var(--theme) !important;
 			.icon {
-				background-color: $white !important;
+				background-color: var(--white) !important;
 			}
 		}
 	}
 }
 .servie-benifit {
 	.icon {
-		background-color: $theme-color !important;
+		background-color: var(--theme) !important;
 		svg {
 			path {
-				fill: $theme-color4 !important;
+				fill: var(--theme4) !important;
 			}
 		}
 	}
@@ -434,25 +434,28 @@
 .approch-items {
 	height: 100%;
 	.icons {
-		background-color: $theme-color !important;
+		background-color: var(--theme) !important;
 		svg {
 			path {
-				fill: $theme-color4;
+				fill: #ffffff !important;
 			}
 		}
 	}
 	.hover-ele {
-		opacity: 0.3 !important;
+		opacity: 0 !important;
 	}
 	&:hover {
-		background-color: $theme-color !important;
+		background-color: var(--theme) !important;
 		.icons {
-			background-color: $theme-color4 !important;
+			background-color: #ffffff !important;
 			svg {
 				path {
-					fill: $theme-color !important;
+					fill: var(--theme) !important;
 				}
 			}
+		}
+		.hover-ele {
+			opacity: 0 !important;
 		}
 	}
 }
