--- a/public/assets/scss/_service.scss
+++ b/public/assets/scss/_service.scss
@@ -25,17 +25,17 @@
 		transition: all 0.3s;
 	}
 	&:hover {
-		background-color: $theme-color2;
+		background-color: var(--theme2);
 		.hover-ele {
 			opacity: 1;
 			right: 0;
 		}
 		.content {
 			.icons {
-				background: $white;
+				background: var(--white);
 				svg {
 					path {
-						fill: $theme-color4;
+						fill: var(--theme4);
 					}
 				}
 			}
@@ -71,11 +71,11 @@
 		h5,
 		a,
 		p {
-			color: $white;
+			color: var(--white);
 		}
-		background-color: $theme-color3;
+		background-color: var(--theme3);
 		.icon {
-			background-color: $white;
+			background-color: var(--white);
 		}
 	}
 }
@@ -108,10 +108,10 @@
 	span,
 	h5,
 	a {
-		color: $theme-color4 !important;
+		color: var(--theme4) !important;
 	}
 	.icon {
-		background-color: $white;
+		background-color: var(--white);
 	}
 }
 
@@ -127,7 +127,7 @@
 		margin: 0 auto;
 	}
 	&:hover {
-		border-color: $theme-color;
+		border-color: var(--theme);
 	}
 	@include breakpoint(max-xl) {
 		padding: 30px 18px;
@@ -170,12 +170,12 @@
 			font-weight: 400;
 			line-height: 150%;
             padding: 6px 16px;
-            color: $white;
+            color: var(--white);
 		}
         .step-dot{
             width: 12px;
             height: 12px;
-            background-color: $white;
+            background-color: var(--theme2);
             border-radius: 100%;
             margin: 0 auto;
         }
