--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,5 +12,10 @@
 @import "/assets/css/nice-select.css";
 @import "/assets/scss/main.scss";
 
+/* Theme files */
+@import "../themes/theme-royal-blue.scss";
+@import "../themes/theme-teal-coral.scss";
+@import "../themes/theme-navy-amber.scss";
+
 /* Custom overrides - must be last to take precedence */
 @import "./custom-overrides.css";
