--- a/public/assets/scss/_header.scss
+++ b/public/assets/scss/_header.scss
@@ -13,16 +13,17 @@
 		z-index: 999;
 		background-color: rgba(255, 255, 255, 0.95);
 		border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-		padding: 8px 0;
+		padding: 4px 0;
 		backdrop-filter: blur(10px);
 		.header-hamburger-inner {
-			gap: 39px;
+			gap: 28px;
 		}
 		.main-menu {
 			ul {
 				li {
 					a {
 						color: #333 !important;
+						padding: 8px 16px 9px;
 						&:hover {
 							background-color: rgba(2, 62, 218, 0.1);
 							color: #023EDA !important;
@@ -33,7 +34,7 @@
 		}
 		@include breakpoint(max-xxxl) {
 			.header-hamburger-inner {
-				gap: 14px;
+				gap: 12px;
 			}
 		}
 	}
